Correct link highlight background (contrast check)

--- a/demo/security.css
+++ b/demo/security.css
@@ -36,7 +36,7 @@
 	}
 
 	#window.js nav ul li.focus {
-		background: #798bb2;
+		background: #677798;
 		color: #FFF;
 	}
 
